# backends_example

./: CMakeLists.txt  README.md  base.f90  cpu.f90  getit.f90  gpu.f90  main.f90  main_cpu.f90  main_gpu.f90  main_hybrid.f90  memblock.f90
cpu/: cpu.f90  memblock_cpu.f90
gpu/: gpu.f90  memblock_gpu.f90
